# shiny

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
res/: index.css  index.html
src/: handlers.rs  main.rs
ui/: Cargo.toml
ui/src/: main.rs
