[package]
name = "shiny"
version = "0.1.0"
authors = ["Billy Stevens <contact@wasv.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.6.3"
actix-web = "1.0"
actix-rt = "0.2"
rust-embed = "5.5.1"
futures = "0.3.5"
mime_guess = "2.0.3"

[build-dependencies]
wasm-bindgen-cli-support = "0.2.63"
