[package]
name = "shiny"
version = "0.1.0"
authors = ["Billy Stevens <contact@wasv.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.6.3"
actix-web = "2.0"
actix-rt = "1.0"
rust-embed = "5.5.1"
futures = "0.3.1"
mime_guess = "2.0.3"
nfd2 = "0.2.1"

[build-dependencies]
wasm-bindgen-cli-support = "0.2.63"
